--- a/svelte/tsconfig.json
+++ b/svelte/tsconfig.json
@@ -11,7 +11,7 @@
 		"strict": true
 	},
 	"include": ["./src/**/*.js", "./src/**/*.ts", "./src/**/*.svelte"],
-	"exclude": ["./.svelte-kit/**", "./node_modules/**"]
+	"exclude": ["./.svelte-kit/**", "./node_modules/**", "./sanity/**"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
