--- a/svelte/package.json
+++ b/svelte/package.json
@@ -33,6 +33,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sanity/client": "^4.0.1"
+		"@cloudinary/url-gen": "^1.9.0",
+		"@sanity/client": "^4.0.1",
+		"@sanity/image-url": "^1.0.2"
 	}
 }
