--- a/svelte/package.json
+++ b/svelte/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"@cloudinary/url-gen": "^1.9.0",
 		"@sanity/client": "^4.0.1",
-		"@sanity/image-url": "^1.0.2"
+		"@sanity/image-url": "^1.0.2",
+		"@sendgrid/mail": "^7.7.0"
 	}
 }
