--- a/svelte/package.json
+++ b/svelte/package.json
@@ -14,7 +14,7 @@
 	"devDependencies": {
 		"@portabletext/svelte": "2.0.0-0",
 		"@portabletext/types": "^2.0.2",
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-cloudflare": "^2.0.2",
 		"@sveltejs/kit": "^1.5.6",
 		"@typescript-eslint/eslint-plugin": "^5.51.0",
 		"@typescript-eslint/parser": "^5.51.0",
